# T-reX

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  make_release.sh  make_toml_reqs.py  models.json  pip_env.txt  pipfreeze.txt  pyproject.toml  pyproject.toml.bak  reqs.txt  requirements.txt  requirements.txt~  requirements_deep.txt  setup.py
.github/workflows/: python-package.yml
bw/: projects.db
bw/default.c21f969b5f03d33d43e04f8f136e7682/: geomapping.pickle  parameters.db  preferences.pickle
config/: default_materials.py  list_materials.txt  queries_materials.py  queries_waste.py  user_settings.py
data/: activities.csv  methods.csv
data/DatabasesWasteAndMaterial/: WMF-ecoinvent_3.9.1_consequential.xlsx  WMF-ecoinvent_3.9.1_cutoff.xlsx  WMF-ecoinvent_cutoff_3.9.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP1-Base_2020.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP1-Base_2030.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP1-Base_2040.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP1-Base_2050.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-Base_2020.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-Base_2030.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-Base_2040.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-Base_2050.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-NPi_2020.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-NPi_2030.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-NPi_2040.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-NPi_2050.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-PkBudg500_2020.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-PkBudg500_2030.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-PkBudg500_2040.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP2-PkBudg500_2050.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP5-Base_2020.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP5-Base_2030.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP5-Base_2040.xlsx  WMF-ecoinvent_cutoff_3.9_remind_SSP5-Base_2050.xlsx  WasteAndMaterialFootprint.xlsx  db_WMF_ecoinvent_cutoff_3.9_remind_SSP1-Base_2050.xlsx  db_WMF_ecoinvent_cutoff_3.9_remind_SSP2-Base_2050.xlsx  db_WMF_ecoinvent_cutoff_3.9_remind_SSP5-Base_2050.xlsx  db_wasteandmaterial_apos391.xlsx  db_wasteandmaterial_con391.xlsx  db_wasteandmaterial_cutoff391.xlsx
data/SearchMaterialResults/: .~lock.cutoff391_material_activities.csv#  .~lock.cutoff391_material_exchanges.csv#  cutoff391_material_activities.csv  cutoff391_material_exchanges.csv  cutoff391_material_exchanges_beryllium.csv  cutoff391_material_exchanges_cobalt.csv  cutoff391_material_exchanges_copper.csv  cutoff391_material_exchanges_fluorspar.csv  cutoff391_material_exchanges_gold.csv  cutoff391_material_exchanges_hafnium.csv  cutoff391_material_exchanges_lithium.csv  cutoff391_material_exchanges_magnesium.csv  cutoff391_material_exchanges_nan.csv  cutoff391_material_exchanges_nickel.csv  cutoff391_material_exchanges_niobium.csv  cutoff391_material_exchanges_palladium.csv  cutoff391_material_exchanges_petroleum.csv  cutoff391_material_exchanges_platinum.csv  cutoff391_material_exchanges_rare earth.csv  cutoff391_material_exchanges_rhodium.csv  cutoff391_material_exchanges_sand.csv  cutoff391_material_exchanges_scandium.csv  cutoff391_material_exchanges_silicon.csv  cutoff391_material_exchanges_silver.csv  cutoff391_material_exchanges_tungsten.csv  cutoff391_material_exchanges_water.csv  cutoff391_material_exchanges_zinc.csv
data/logs/: 09202023_ExchangeEditor.txt  09212023_ExchangeEditor.txt  09222023_ExchangeEditor.txt  09252023_ExchangeEditor.txt  09292023_ExchangeEditor.txt  10022023_ExchangeEditor.txt  12062023_ExchangeEditor.txt  12112023_ExchangeEditor.txt  12122023_ExchangeEditor.txt  12132023_ExchangeEditor.txt  main_log.txt
docs/: ExchangeEditor.rst  ExplodeDatabase.rst  FutureScenarios.rst  MakeCustomDatabase.rst  MethodEditor.rst  SearchMaterial.rst  SearchWaste.rst  VerifyDatabase.rst  batteries.rst  conf.py  index.rst  modules.rst  queries_materials.rst  queries_waste.rst  requirements.txt  user_settings.rst
docs/_build/: index.html  intro.html  modules.html  py-modindex.html  searchindex.js
docs/source/: ExchangeEditor.rst  ExplodeDatabase.rst  FutureScenarios.rst  MakeCustomDatabase.rst  MethodEditor.rst  Part 1: FutureScenarios  SearchMaterial.rst  SearchWaste.rst  VerifyDatabase.rst  WasteAndMaterialFootprint.rst  conf.py  configuration.rst  example_output.rst  examples.rst  index.rst  installation.rst  intro.rst  modules.rst  source_code.rst  usage.rst
examples/: README.md  T-reX_example_terminal_output.txt  T-reX_virtual_environment_pip-freeze.txt  batteries.py
examples/batteries/: 01_calculate-batteries.py  02_process-results.py  05d_visualisation_bar_combine_top-processes.py  README.md  T-reX_battery_case_study_terminal_output.html  T-reX_battery_case_study_terminal_output.txt  _00_main.py  _01a_calculate-batteries.py  _01b_calculate-batteries-contribution.py  _02a_process-results.py  _02b_process-results_top-processes.py  _03_process-supply_chain_results.py  _03a_process-supply_chain_results.py  _04_visualisation_scatter.py  _04a_visualisation_scatter.py  _04b_visualisation_scatter_combine.py  _04c_visualisation_scatter_similar_methods.py  _05a_visualisation_bar.py  _05b_visualisation_bar_combine.py  _05c_visualisation_bar_top-processes.py  _05d_visualisation_bar_combine_top-processes.py  batteries.py  metadata.py  multilca.py  requirements.txt  results.py  similar_methods.py  supply_chain_results top-processes.py  test.csv  utils.py  visualisation_bar.py  visualisation_bar_combine.py  visualisation_bar_combine_top-processes.py  visualisation_bar_top-processes.py  visualisation_scatter.py  visualisation_scatter_combine.py
examples/batteries_archive/: visualisation_bar_top-processes.py  visualisation_scatter_combine.py
examples/data/: .~lock.results.csv#  .~lock.supply_chain_results.csv#  activities.csv  methods.csv  (+1 more)
recipe/: meta.yaml
slurm/: futurescenarios.slurm
tests/: test-import.py  test-verify.py
(+6122 files in other folders)
