[tool.poetry]
name = "T-reX"
version = "0.1.21"
description = "A tool for analysing waste and material footprints in Life Cycle Assessment (LCA) databases"
authors = ["Stewart Charles McDowall <s.c.mcdowall@cml.leidenuniv.nl>"]
license = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
readme = "README.md"
include = ["config/**/*", "misc/**/*", "src/**/*", "tests/**/*"]
exclude = ["**/__pycache__/"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",

]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
bw2data = "^3.6.6"
premise = "^1.8.2dev3"
bw2io = "^0.8.12"
bw2calc = "^1.8.2"
cowsay = "^6.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
wurst = "^0.4"
pandas = "^2.1.4"
premise-gwp = "^0.9.6"

[tool.poetry.dependencies.playsound]
git = "https://github.com/taconi/playsound.git"


[tool.poetry.dev-dependencies]
Sphinx = "^7.2.6"

[[tool.poetry.packages]]
include = "T-reX"
from = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "T-reX"
version = "0.1.21"
authors = [
  { name="Stewart Charles McDowall", email="s.c.mcdowall@cml.leidenuniv.nl" },
]
include = ["config/**/*", "misc/**/*", "src/**/*", "tests/**/*"]
license = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
description = "A tool for analysing waste and material footprints in Life Cycle Assessment (LCA) databases"
readme = "README.md"
requires-python = ">=3.10, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]

[project.dependencies]
bw2data = "^3.6.6"
premise = "^1.8.1"
bw2io = "^0.8.12"
bw2calc = "^1.8.2"
cowsay = "^6.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
wurst = "^0.4"
pandas = "^2.1.4"
playsound = "^1.3.0"
premise-gwp = "^0.9.6"

[project.optional-dependencies]
dev = ["Sphinx ^7.2.6"]

[project.urls]
Homepage = "https://github.com/Stew-McD/T-reX"
Documentation = "https://T-reX.readthedocs.io/en/latest/"
