[tool.poetry]
name = "T_reX_LCA"
version = "0.2.1"
description = "A tool for analysing waste and material footprints in Life Cycle Assessment (LCA) databases"
authors = ["Stewart Charles McDowall <s.c.mcdowall@cml.leidenuniv.nl>"]
license = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
readme = "README.md"
include = ["config/**/*", "misc/**/*", "src/**/*", "tests/**/*"]
exclude = ["**/__pycache__/"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",

]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
brightway2 = "^2.4.6"
bw2data = "^3.6.6"
bw2io = "^0.8.12"
bw2calc = "^1.8.2"
bw2speedups = "^3.1"
premise = "^2.0.2"
premise-gwp = "^0.9.6"
cowsay = "^6.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
wurst = "^0.4"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]
Sphinx = "^7.2.6"

[[tool.poetry.packages]]
include = "T-reX"
from = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "T_reX_LCA"
version = "0.2.1"
authors = [
  { name="Stewart Charles McDowall", email="s.c.mcdowall@cml.leidenuniv.nl" },
]
include = ["config/**/*", "misc/**/*", "src/**/*", "tests/**/*"]
license = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
description = "A tool for analysing waste and material footprints in Life Cycle Assessment (LCA) databases"
readme = "README.md"
requires-python = ">=3.10, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]

[project.dependencies]
python = ">=3.10, <3.12"
brightway2 = "^2.4.6"
bw2data = "^3.6.6"
bw2io = "^0.8.12"
bw2calc = "^1.8.2"
bw2speedups = "^3.1"
premise = "^2.0.2"
premise-gwp = "^0.9.6"
cowsay = "^6.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
wurst = "^0.4"
pandas = "^2.1.4"

[project.optional-dependencies]
dev = ["Sphinx ^7.2.6"]

[project.urls]
Homepage = "https://github.com/Stew-McD/T-reX"
Documentation = "https://T-reX.readthedocs.io/en/latest/"
